--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,10 +1,8 @@
-cat > .github/workflows/ping.yml <<'YAML'
 name: call-bot-every-5m
-
 on:
   schedule:
-    - cron: "*/5 * * * *"   # chạy mỗi 5 phút (UTC)
-  workflow_dispatch:        # cho phép bấm chạy tay
+    - cron: '*/5 * * * *'   # chạy mỗi 5 phút (UTC)
+  workflow_dispatch:        # cho phép bấm Run workflow thủ công
 
 jobs:
   ping:
@@ -15,4 +13,3 @@ jobs:
           curl -sS -X POST \
             -H "X-CRON-SECRET: ${{ secrets.CRON_SECRET }}" \
             "${{ secrets.APP_URL }}/task/weekly"
-YAML
