--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,8 +1,8 @@
 name: call-bot-every-5m
 on:
   schedule:
-    - cron: '*/5 * * * *'   # chạy mỗi 5 phút (UTC)
-  workflow_dispatch:        # cho phép bấm Run workflow thủ công
+    - cron: '*/5 * * * *'   # every 5 minutes (UTC)
+  workflow_dispatch:        # allow manual run
 
 jobs:
   ping:
