--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -2,7 +2,7 @@ name: call-bot-every-5m
 on:
   schedule:
     - cron: '*/5 * * * *'   # every 5 minutes (UTC)
-  workflow_dispatch:
+  workflow_dispatch:        # allow manual runs
 
 concurrency:
   group: ping-every-5m
@@ -12,6 +12,9 @@ jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
+      - name: Timestamp (UTC)
+        run: date -u
+
       - name: Call /task/weekly
         run: |
           curl -sS -X POST \
