chore: add UTC + Vietnam timestamps to workflow

--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Timestamp (UTC)
         run: date -u
 
+      - name: Timestamp (Asia/Ho_Chi_Minh)
+        run: TZ=Asia/Ho_Chi_Minh date
+
       - name: Call /task/weekly
         run: |
           curl -sS -X POST \
