--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,7 @@ flask==3.0.0
 requests==2.32.3
 python-dotenv==1.0.1
 gunicorn==22.0.0
-
-easyocr==1.7.1
-torch==2.8.0
-torchvision==0.23.0
-pillow==10.4.0
-opencv-python-headless==4.10.0.84
 rapidfuzz==3.9.6
+rapidocr-onnxruntime==1.3.23
+Pillow==10.4.0
+opencv-python-headless==4.10.0.84
